String templates + final (code/tests/build) changes